--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CRUD_Room_Database">
 <activity android:name=".RecyclerView.ListActivity"/>
-        <activity android:name=".IsertUserActivity">
+        <activity android:name=".InsertUserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
