--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,18 @@
- plugins {
-     id 'com.android.application'
-     id 'kotlin-android'
-     id 'kotlin-android-extensions'
-     id 'kotlin-kapt'
-     id "androidx.navigation.safeargs.kotlin"
- }
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 
+}
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.CRUD_Room_Database"
-        minSdkVersion 24
+        applicationId "com.example.crud"
+        minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -47,24 +46,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    // Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
 
     // Room components
     implementation "androidx.room:room-runtime:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
     implementation "androidx.room:room-ktx:2.2.5"
     androidTestImplementation "androidx.room:room-testing:2.2.5"
-
-    // Lifecycle components
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-
-    // Kotlin components
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
-
 }
