--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.crud_room_database">
+    package="com.example.crud">
 
     <application
+        android:name=".CRUDApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CRUD_Room_Database">
-<activity android:name=".RecyclerView.ListActivity"/>
-        <activity android:name=".IsertUserActivity">
+        android:theme="@style/Theme.CRUD">
+        <activity android:name=".presentation.list.ListActivity"/>
+        <activity android:name=".presentation.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,5 +19,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
